# Polymarket-Weather-Predictor

./: .env.example  .gitignore  LIVE_TRADING_GUIDE.md  README.md  pyproject.toml  requirements.txt
polymarket/: __init__.py  config.py
polymarket/api/: __init__.py  live_trader.py  polymarket_client.py
polymarket/data_pipeline/: __init__.py  data_processor.py  noaa_fetcher.py
polymarket/database/: __init__.py  connection.py  models.py
polymarket/models/: __init__.py  bayesian_model.py  calibration.py
polymarket/trading/: __init__.py  market_maker.py  monte_carlo.py
scripts/: example_workflow.py  init_db.py  live_trading_example.py
tests/: __init__.py  test_api.py  test_models.py  test_trading.py
