[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-weather-predictor"
version = "1.0.0"
description = "Probabilistic forecasting system for weather prediction markets on Polymarket"
authors = [
    {name = "Ali Haroon", email = "alha3308@colorado.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
    "psycopg2-binary>=2.9.6",
    "sqlalchemy>=2.0.20",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/Ali-Haroon3/Polymarket-Weather-Predictor"
Repository = "https://github.com/Ali-Haroon3/Polymarket-Weather-Predictor"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket*"]
